--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 Some codes from Lockdown Learning Bioinformatics-along with Simon Cockell on Youtube
 Analyse and visualise a (covid-relevant) RNA-Seq datset
+I wrote here again
