A change from the VM

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Some codes from Lockdown Learning Bioinformatics-along with Simon Cockell on Youtube
 Analyse and visualise a (covid-relevant) RNA-Seq datset
 I wrote here again
+I write this text on my VM
